@@ -1,3 +1,13 @@
+2007-05-23 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b65
+
+ * Change: Renamed feaure photo block to feature item block.
+
+ * Fix: Link an featured subalbum did not work.
+
+ * Fix: Removed debug code in microthumb.
+
+ Thanks again to Kai.
+
 2007-05-23 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b64
 
  * New: In Joomla! and Mambo you can now enter which userlevel
